--- a/rpc/proto/BUILD
+++ b/rpc/proto/BUILD
@@ -1,11 +1,10 @@
 package(default_visibility = ["//visibility:public"])
 
+load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
 load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
-load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library")
-#load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
-#load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
 
 proto_library(
     name = "data_proto",
@@ -37,25 +36,14 @@ go_proto_library(
 )
 
 py_proto_library(
-    name = "data_py_pb2",
-    srcs = [
-        "common.proto",
-        "item.proto",
-        "user.proto",
-        "service.proto"
-    ],
-#    deps = [":data_proto"],
-    deps = ["@com_google_protobuf//:protobuf_python",],
+    name = "data_py_proto",
+    deps = [":data_proto"],
 )
 
 py_grpc_library(
-    name = "rcd_py_pb2_grpc",
+    name = "rcd_py_grpc",
     srcs = [
-#        "common.proto",
-#        "item.proto",
-#        "user.proto",
-        "service.proto",
-#        ":data_proto"
+        ":data_proto"
     ],
-    deps = [":data_py_pb2"],
+    deps = [":data_py_proto"],
 )
